UI.Server/wwwroot/app.css
html, body {
    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
    width: 100%;
    height: 100%;
    font-size: 16px;
}

@media (max-width: 599px) {
    html, body {
        font-size: 14px;
    }
}

@media (min-width: 1200px) {
    html, body {
        font-size: 18px;
    }
}

:root {
    --bg-dark: #0f111a;
    --bg-dark-transparent-50: rgba(15,17,26,0.5);
    --text-light: #e4e4e4;
    --primary: #3c82f6;
    --secondary: rgba(189, 188, 188, 0.84);
}

body {
    margin: 0;
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    background-color: var(--bg-dark);
    color: var(--text-light);
    overflow-x: hidden;
}

header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 1rem 2rem;
    background-color: var(--bg-dark);
    border-bottom: 1px solid #1f2937;
}

.logo {
    font-size: 1.25rem;
    font-weight: bold;
    color: var(--text-light);
    display: block;
    text-decoration: none;
}

.logo__subtext {
    font-size: 0.6rem;
    font-weight: lighter;
    color: var(--text-light);
}

nav a {
    color: var(--text-light);
    text-decoration: none;
    margin-left: 1.5rem;
    font-size: 0.95rem;
}

.hero {
    text-align: center;
    margin-top: 3rem;
    margin-bottom: 2rem;
}

.hero h1 {
    font-size: 2rem;
    color: white;
}

.hero .highlight {
    color: var(--primary);
}

.glide {
    width: 100%;
    margin: 0 auto;
    position: relative;
    overflow: hidden;
    min-height: 300px;
}

.glide__track {
    overflow: visible;
    margin: 0 1vw;
}

@media (max-width: 1200px) {
    .glide__track {
        margin: 0 3vw;
    }
}

.glide__slides {
    display: flex;
    align-items: baseline;
}

.glide__slide {
    flex: 0 0 auto;
    width: 300px;
    margin-right: 24px;
    position: relative;
    list-style-type: none;
}

.glide__slide-title {
    text-align: center;
    margin-top: 5px;
    padding: 0 10px;
    color: var(--text-light);
    font-size: 0.9rem;
}

@media (max-width: 500px) {
    .glide__slide-title {
        font-size: 1.1rem;
    }
}

.glide__slide-rating {
    text-align: center;
    width: 40px;
    height: 40px;
    border-radius: 50%;
    background-color: #10881fdb;
    color: var(--text-light);
    font-size: 0.9rem;
    font-weight: 600;
    display: flex;
    justify-content: center;
    align-items: center;
    position: absolute;
    bottom: 10px;
    left: 10px;
    z-index: 6;
}

.glide__slide-image-container {
    position: relative;
    width: 100%;
    border-radius: 16px;
    display: block;
    overflow: hidden; 
}

.glide__slide-image-overlay {
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    z-index: 5;
    background-color: rgba(0, 0, 0, 0.6);
    display: none;
    text-decoration: none;
    pointer-events: none;
}

.glide__slide_show-overlay .glide__slide-image-overlay {
    display: block;
    pointer-events: all;
}

@media (hover: hover) and (pointer: fine) {
    .glide__slide-image-container:hover .glide__slide-image-overlay {
        display: block;
        pointer-events: all;
    }
}

.glide__slide-description {
    display: -webkit-box;      
    -webkit-box-orient: vertical;
    -webkit-line-clamp: 3;
    height: 4.5em;
    line-height: 1.5em;
    overflow: hidden;  
    text-overflow: ellipsis;
    color: var(--text-light);
    padding: 0 10px;
    font-size: 0.9rem;
    
}

.glide__slide-genres {
    display: block;
    height: 1.5em;
    line-height: 1.5em;
    overflow: hidden;
    text-overflow: ellipsis;
    color: var(--text-light);
    padding: 0 10px;
    font-size: 0.9rem;
}

@media (max-width: 500px) {
    .glide__slide-description, .glide__slide-genres {
        font-size: 1.1rem;
    }
}


.glide__slide img {
    width: 100%;
    border-radius: 16px;
    display: block;
}

.glide__arrow {
    position: absolute;
    top: 50%;
    transform: translateY(-50%);
    background-color: rgba(15, 17, 26, 0.7);
    border: 1px solid #333;
    border-radius: 50%;
    width: 40px;
    height: 40px;
    display: flex;
    justify-content: center;
    align-items: center;
    cursor: pointer;
    color: var(--text-light);
    font-size: 1.5rem;
    z-index: 10;
}

.glide__arrow--left {
    left: 10px;
}

.glide__arrow--right {
    right: 10px;
}

.glide_model-not-trained {
    position: absolute;
    left: 50%;
    top: 50%;
    transform: translate(-50%, -50%);
    display: block;
    width: 450px;
    height: 100px;
    text-align: center;
}

.glide__loading-overlay {
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    background-color: var(--bg-dark-transparent-50);
    display: none;
    z-index: 10;
}

.glide__loader {
    width: 48px;
    height: 48px;
    border: 5px solid #FFF;
    border-bottom-color: transparent;
    border-radius: 50%;
    display: inline-block;
    box-sizing: border-box;
    animation: rotation 1s linear infinite;
    position: absolute;
    left: 50%;
    top: 50%;
    transform: translate(-50%, -50%);
}

@keyframes rotation {
    0% {
        transform: rotate(0deg);
    }
    100% {
        transform: rotate(360deg);
    }
}


.glide.glide_loading .glide__loading-overlay {
    display: block;
}

.blazor-app_loading .glide__loading-overlay {
    display: none !important;
}

.blazor-app_loading .blazor-app__loading-overlay {
    display: block;
}

.blazor-app__loading-overlay {
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    background-color: var(--bg-dark-transparent-50);
    display: none;
    z-index: 10;
}

.gradient-overlay {
    position: absolute;
    top: 0;
    bottom: 0;
    width: 10vw;
    z-index: 5;
    pointer-events: none;
}

.overlay-left {
    left: 0;
    background: linear-gradient(to right, rgba(15,17,26,0.8) 30%, rgba(15,17,26,0));
}

.overlay-right {
    right: 0;
    background: linear-gradient(to left, rgba(15,17,26,0.8) 30%, rgba(15,17,26,0));
}


.button {
    display: inline-block;
    padding: 0.5rem 1.5rem;
    font-size: 1rem;
    color: var(--primary);
    border: 2px solid var(--primary);
    border-radius: 999px;
    background: transparent;
    cursor: pointer;
}

.button_secondary {
    color: var(--secondary);
    border: 2px solid var(--secondary);
}

.actions-panel {
    display: block;
    text-align: center;
    margin: auto 1rem;
}

.preferences-overlay {
    position: fixed;
    top: 69px;
    left: 0;
    right: 0;
    bottom: 0;
    background-color: rgba(0,0,0,0.5);
    z-index: 100;
    display: flex;
    justify-content: center;
    align-items: center;
    
}

@media (max-width: 1000px) {
    .preferences-overlay {
        overflow-y: auto;
    }   
}

.preferences-overlay.hidden {
    display: none;   
}

.preferences-overlay__title {
    text-align: center;
}

.preferences-overlay__container {
    width: 50%;
    padding: 2rem;
    position: absolute;
    top: 0;
    min-width: 300px;
}

.preferences-overlay__actions {
    text-align: right;
}

.content-wrapper.hidden {
    display: none;
}


.loading-progress {
    position: relative;
    display: block;
    width: 8rem;
    height: 8rem;
    margin: 20vh auto 1rem auto;
}

.loading-progress circle {
    fill: none;
    stroke: #e0e0e0;
    stroke-width: 0.6rem;
    transform-origin: 50% 50%;
    transform: rotate(-90deg);
}

.loading-progress circle:last-child {
    stroke: #1b6ec2;
    stroke-dasharray: calc(3.141 * var(--blazor-load-percentage, 0%) * 0.8), 500%;
    transition: stroke-dasharray 0.05s ease-in-out;
}

.loading-progress-text {
    position: absolute;
    text-align: center;
    font-weight: bold;
    inset: calc(20vh + 3.25rem) 0 auto 0.2rem;
}

.loading-progress-text:after {
    content: var(--blazor-load-percentage-text, "Loading");
}

.page {
    position: relative;
    display: flex;
    flex-direction: column;
}

main {
    flex: 1;
}

.sidebar {
    background-image: linear-gradient(180deg, rgb(5, 39, 103) 0%, #3a0647 70%);
}

.top-row {
    background-color: #f7f7f7;
    border-bottom: 1px solid #d6d5d5;
    justify-content: flex-end;
    height: 3.5rem;
    display: flex;
    align-items: center;
}

    .top-row ::deep a, .top-row ::deep .btn-link {
        white-space: nowrap;
        margin-left: 1.5rem;
        text-decoration: none;
    }

    .top-row ::deep a:hover, .top-row ::deep .btn-link:hover {
        text-decoration: underline;
    }

    .top-row ::deep a:first-child {
        overflow: hidden;
        text-overflow: ellipsis;
    }

.bi {
    display: inline-block;
    position: relative;
    width: 1.25rem;
    height: 1.25rem;
    margin-right: 0.75rem;
    top: -1px;
    background-size: cover;
}

.bi-github-icon {
    /*background-image: url('data:image/svg+xml,<svg width="98" height="96" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M48.854 0C21.839 0 0 22 0 49.217c0 21.756 13.993 40.172 33.405 46.69 2.427.49 3.316-1.059 3.316-2.362 0-1.141-.08-5.052-.08-9.127-13.59 2.934-16.42-5.867-16.42-5.867-2.184-5.704-5.42-7.17-5.42-7.17-4.448-3.015.324-3.015.324-3.015 4.934.326 7.523 5.052 7.523 5.052 4.367 7.496 11.404 5.378 14.235 4.074.404-3.178 1.699-5.378 3.074-6.6-10.839-1.141-22.243-5.378-22.243-24.283 0-5.378 1.94-9.778 5.014-13.2-.485-1.222-2.184-6.275.486-13.038 0 0 4.125-1.304 13.426 5.052a46.97 46.97 0 0 1 12.214-1.63c4.125 0 8.33.571 12.213 1.63 9.302-6.356 13.427-5.052 13.427-5.052 2.67 6.763.97 11.816.485 13.038 3.155 3.422 5.015 7.822 5.015 13.2 0 18.905-11.404 23.06-22.324 24.283 1.78 1.548 3.316 4.481 3.316 9.126 0 6.6-.08 11.897-.08 13.526 0 1.304.89 2.853 3.316 2.364 19.412-6.52 33.405-24.935 33.405-46.691C97.707 22 75.788 0 48.854 0z" fill="#fff"/></svg>');*/
    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='white' class='bi bi-house-door-fill' viewBox='0 0 16 16'%3E%3Cpath d='M6.5 14.5v-3.505c0-.245.25-.495.5-.495h2c.25 0 .5.25.5.5v3.5a.5.5 0 0 0 .5.5h4a.5.5 0 0 0 .5-.5v-7a.5.5 0 0 0-.146-.354L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293L8.354 1.146a.5.5 0 0 0-.708 0l-6 6A.5.5 0 0 0 1.5 7.5v7a.5.5 0 0 0 .5.5h4a.5.5 0 0 0 .5-.5Z'/%3E%3C/svg%3E");
    
}

@media (max-width: 640.98px) {
    .top-row {
        justify-content: space-between;
    }

    .top-row ::deep a, .top-row ::deep .btn-link {
        margin-left: 0;
    }
}

@media (min-width: 641px) {
    .page {
        flex-direction: row;
    }

    .sidebar {
        width: 250px;
        height: 100vh;
        position: sticky;
        top: 0;
    }

    .top-row {
        position: sticky;
        top: 0;
        z-index: 1;
    }

    .top-row.auth ::deep a:first-child {
        flex: 1;
        text-align: right;
        width: 0;
    }

    .top-row, article {
        padding-left: 2rem !important;
        padding-right: 1.5rem !important;
    }
}

#blazor-error-ui {
    color-scheme: light only;
    background: lightyellow;
    bottom: 0;
    box-shadow: 0 -1px 2px rgba(0, 0, 0, 0.2);
    box-sizing: border-box;
    display: none;
    left: 0;
    padding: 0.6rem 1.25rem 0.7rem 1.25rem;
    position: fixed;
    width: 100%;
    z-index: 1000;
}

    #blazor-error-ui .dismiss {
        cursor: pointer;
        position: absolute;
        right: 0.75rem;
        top: 0.5rem;
    }

